fix: UIS-1380: fix button margins, make large text overflow with ellipsis

--- a/components/PageLayout/style.css
+++ b/components/PageLayout/style.css
@@ -25,8 +25,7 @@
 }
 
 .buttonsWrap {
-    overflow: hidden;
-    margin-left: 20px; /* Margin between buttons and the heading */
+    margin-left: 60px; /* Margin between buttons and the heading */
 }
 .buttonsContainer {
     display: flex;
@@ -35,7 +34,7 @@
 }
 .buttonWrap {
     float: left;
-    margin-right: 20px;
+    margin-right: 10px;
     white-space: nowrap;
 }
 .buttonWrap:last-child {
@@ -44,11 +43,24 @@
 
 .headerWrapper {
     background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .heading {
-    position: relative;
+    margin: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;     
 }
+
+.headingTextWrap {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    vertical-align: middle;
+    display: inline-block;
+} 
 
 .heading .breadcrumbsWrap {
     font-size: 12px;
